--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,13 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;700&display=swap" rel="stylesheet">
+
     <title>Tienda Pixeles</title>
   </head>
   <body>
-    <noscript>Neceistas tener habilitado JavaScript para poder correr esta aplicación.</noscript>
+    <noscript>Necesitas tener habilitado JavaScript para poder correr esta aplicación.</noscript>
     <div id="root"></div>
   </body>
 </html>
